kubernetes/gke-utility/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #   - monitoring.prow.k8s.io
  #   secretName: monitoring-prow-tls
  rules:
  - host: monitoring.prow.k8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
